--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 Essa primeira Versao bizzara ate foi batisada em homenagem ao seu criador. seriam os Dandrois
             </p>
             <h2>
-                Surge um novo mascote //////////////
+                Surge um novo mascote 
             </h2>
             <p>
                 A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://www.irinablok.com/android" target="_blank" rel="external">Irina Blok</a>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.
